--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="og:title" content="Little Lemon website" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="og:image" content="../src/images/Logo.svg" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
-    />
+      content="Little lemon restaurant website for introducing, looking for menu, reserving a table or contacting" />
+    <meta
+      name="og:description"
+      content="Little lemon restaurant website for introducing, looking for menu, reserving a table or contacting" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
