--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Markazi+Text:wght@500&display=swap"
       rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Karla&display=swap"
+      rel="stylesheet" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
